--- a/base/styles.css
+++ b/base/styles.css
@@ -5,7 +5,8 @@
   width: 40px;
   height: 40px;
   line-height: 40px;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
   margin-right: 20px;
+  color: white;
 }
